# m365-audit-mcp

./: .gitignore  CHANGELOG.md  CITATION.cff  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  pages.yml  screenshots.yml
docs/: architecture.md  customization.md  diagrams.md  evaluation.md  faq.md  getting-started.md  portfolio-config.json  sample-run.txt
examples/: tenant_health_report.py
src/m365_audit_mcp/: __init__.py  audit_tools.py  mock_data.py  server.py
tests/: test_audit_tools.py
